# mogship-leveling

./: Dockerfile  LICENSE  README.md  pyproject.toml
app/: main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: routes.py
app/core/: elasticsearch.py  logging.py
app/models/: route.py
mogship_leveling/: main.py
mogship_leveling/api/: deps.py
mogship_leveling/api/api_v1/: api.py
mogship_leveling/api/api_v1/endpoints/: routes.py
mogship_leveling/core/: config.py  elasticsearch.py
mogship_leveling/models/: route.py
tests/: test_mogship_leveling.py
