[tool.poetry]
name = "mogship-leveling"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.15.0"
fastapi = "^0.61.2"
uvicorn = "^0.12.3"
elasticsearch = {extras = ["async"], version = "^7.10.0"}
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
flake8 = "^3.8.4"
black = "^20.8b1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
